correction bd/film

--- a/film/main/templates/main/base.html
+++ b/film/main/templates/main/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <title>Bandes Dessinées</title>
+        <title>Films</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <link rel="stylesheet" href="/static/main/assets/css/main.css" />
@@ -54,7 +54,7 @@
                             <section>
                                 <h2>Développeur</h2>
                                 <p>
-                                    Site web développé par Juliette Debono pour faciliter la recherche de bande dessinée.
+                                    Site web développé par Juliette Debono pour faciliter la recherche de films.
                                 </p>
                             </section>
                         </div>
