update github url

--- a/film/main/templates/main/base.html
+++ b/film/main/templates/main/base.html
@@ -54,7 +54,7 @@
                             <section>
                                 <h2>Développeur</h2>
                                 <p>
-                                    Site web développé par Juliette Debono pour faciliter la recherche de films.
+                                    Site web développé par Jul Sql pour faciliter la recherche de films.
                                 </p>
                             </section>
                         </div>
@@ -64,7 +64,7 @@
 
             <!-- Copyright -->
             <div id="copyright">
-                &copy; Juliette Debono 2023 | Design: <a href="http://html5up.net">HTML5 UP</a>
+                &copy; Jul Sql 2023 | Design: <a href="http://html5up.net">HTML5 UP</a>
             </div>
         </div>
 
